<resources>
    <string name="app_name">ValarezoD_U2</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="titleApp">Asteroides</string>
    <string name="action_setting">Configuración</string>
    <string name="about_text">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se puede lanzar nuevas actividades</string>
    <!-- Segunda Lengueta. -->
    <string name="tab2_name">Layout</string>
    <string name="Saludo">Hola</string>
    <string name="Resultado">Resultado</string>
    <string name="In">Introduce un número</string>

    <string name="tab3_name">Botón</string>
    <string name="tab4_name">Calculadora</string>
    <string name="error_cal">Error</string>
    <string name="more_App">Más Apps</string>



</resources>
