<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_botones">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/titleApp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/b_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arrancar" />

    <Button
        android:id="@+id/b_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/b_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acercade" />

    <Button
        android:id="@+id/b_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Salir" />

</LinearLayout>